# codanna

./: .codannaignore  .gitignore  .mcp.json  .mcp_stdio.json  BULLETPROOFING_PLAN.md  CHANGELOG.md  CLAUDE.md  CLI.md  CLIPPY_FIX_PLAN.md  CODE_GUIDELINES.md  Cargo.toml  DOCUMENT_ORGANIZATION.md  DOC_SEARCH_ARCHITECTURE.md  EMBEDDING_RESEARCH_PROMPT.md  EMBEDDING_TDD_PLAN.md  FIX_IMPORT_RESOLUTION_PLAN.md  GUIDELINES_COMPARISON.md  ISSUES.md  MCP_SEMANTIC_SEARCH_STATUS.md  MCP_TOOLS_GUIDE.md  NOTICE  PERSISTENCE_LIFECYCLE.md  README  README copy 2.md  README.md  RELATIONSHIP_EXTRACTION_FIX_TASKS.md  RUST_API_REVIEW.md  TANTIVY_IVFFLAT_CODE_REVIEW.md  TANTIVY_IVFFLAT_IMPLEMENTATION_PLAN.md  TANTIVY_IVFFLAT_TDD_PLAN.md  TANTIVY_REFACTOR_CODE_REVIEW.md  TODO.md  TODO_TDD.md  VECTOR_SEARCH_INTEGRATION_PLAN.md  VECTOR_TEST_REFERENCE.md  VECTOR_UPDATE_TEST_REVIEW.md  clippy.toml  context7.json  cross-file-relationship-building-plan.md  demo-mcp-architecture.sh  (+7 more)
.cargo/: config.toml
.claude/: AGENTS_GUIDE.md
.claude/agents/: code-documenter.md  import-fixer.md  integration-engineer.md  method-call-implementer.md  migration-engineer.md  quality-reviewer.md  rust-code-quality-reviewer.md  rust-vector-search-engineer.md  tdd-architect.md  test-runner.md  vector-engineer.md
.claude/commands/: doc-file.md  map.md  migrate.md  tdd.md
.codanna/: settings.toml
.code-intelligence/: settings.toml  settings.toml.example
.github/workflows/: autofix.yml  brew-update.yml  full-test.yml  pr-comment.yml  quick-check.yml  release.yml
.serena/: project.yml
contributing/development/: language-support.md
contributing/scripts/: auto-fix.sh  embedding-stall-harness.sh  full-test.sh  quick-check.sh
contributing/tree-sitter/: README.md
demo/: example.rs
docs/: PGVECTOR_SETUP.md  c_cpp_support.md
docs/advanced/: project-resolution.md
docs/architecture/: README.md  embedding-model.md  how-it-works.md  language-support.md  memory-mapping.md
docs/archive/: FIX_PLAN_RELATIONSHIPS.md  FIX_PLAN_SYMBOL_COUNT.md  RELATIONSHIP_EXTRACTION_FIX_TASKS.md  SEMANTIC_EMBEDDING_CLEANUP_PLAN.md  SEMANTIC_PERSISTENCE_PROGRESS_TRACKER.md  SEMANTIC_SEARCH_PERSISTENCE_ANALYSIS.md  SRC_FILE_MAP.md  TANTIVY_IVFFLAT_IMPLEMENTATION_PLAN.md  VECTOR_INTEGRATION_PLAN.md
docs/development/: guidelines.md  language-support.md  testing.md
docs/getting-started/: README.md  first-index.md  quick-start.md
docs/integrations/: README.md  claude-code.md  http-server.md  https-setup.md
docs/reference/: README.md  concepts.md
docs/user-guide/: README.md  cli-reference.md  configuration.md  documents.md  mcp-tools.md  search-guide.md
examples/: benchmark_semantic_language_filter.sh  doc_extraction_example.rs  dump_edges.rs  parser_census.rs  pipeline_metrics_demo.rs  resolution_precision.rs  test_language_filter.go
examples/clojure/: comprehensive.clj
examples/csharp/: generic_shift.cs
examples/java/: comprehensive.java  varargs.java
examples/javascript/: Light.js  comprehensive.js  jsconfig.json  test_extends.js
examples/kotlin/: comprehensive.kt  context_receiver.kt  extension_generic_test.kt  extension_test.kt  reddit_challenge.kt  simple_extension_test.kt  test_string_literal.kt  value_class.kt  visibility_test.kt
examples/lua/: comprehensive.lua  main.lua
examples/nix/: comprehensive.nix  main.nix
examples/php/: inheritance.php  readonly_class.php
examples/python/: comprehensive.py
examples/rust/: calculator.rs  calculator_user.rs  comprehensive.rs  main_app.rs  union_identifier.rs
examples/svelte/: comprehensive.svelte
examples/swift/: comprehensive.swift  (+2 more)
plans/: INTEGRATION_TEST_PLAN.md  MethodCall-analysis.md  MethodCall-implementation.md
research/: Report-1.md  Report-2.md  Report-3.md  Report-4-lancedb.md
reviews/: VECTOR_ACCURACY_CRITICAL_FIXES.md  VECTOR_ACCURACY_FINAL_REPORT.md  VECTOR_ACCURACY_FINAL_VERIFICATION.md  VECTOR_INTEGRATION_TEST_REVIEW.md  VECTOR_SEARCH_ACCURACY_FIXES_VERIFICATION.md  VECTOR_SEARCH_ACCURACY_TEST_REVIEW.md  VECTOR_SEARCH_ACCURACY_TEST_REVIEW_SCOPE.md  VECTOR_SEARCH_ACCURACY_TEST_SPEC.md  VECTOR_SEARCH_ACCURACY_VERIFICATION_REPORT.md  VECTOR_TESTS_11_12_QUALITY_REVIEW.md  VECTOR_TEST_11_12_FIXES.md  VECTOR_UPDATE_POC_TEST_FIXES.md  VECTOR_UPDATE_TEST_FIXES.md  clustering-implementation-review.md  embedding-module-review.md  hybrid-search-integration-test-review.md  hybrid-search-integration-verification-review.md  kmeans-clustering-final-review.md  kmeans-clustering-followup-review.md  kmeans-clustering-review.md  lib-rs-review.md  rand-api-final-verification.md  rand-api-fix-verification-review.md  simple-indexer-vector-integration-review.md  vector-module-comprehensive-review.md  vector-module-foundation-review.md  vector-search-engine-review.md  vector-search-engine-verification-review.md  vector-storage-review.md  vector-types-review.md
scripts/: install.ps1  install.sh
src/: config.rs  error.rs  git.rs  init.rs  lib.rs  logging.rs  main.rs  retrieve.rs  serve_discovery.rs  serve_tls.rs  test_incremental.rs  utils.rs
src/cli/: mod.rs  (+1 more)
test_relationships/: main.rs  module_a.rs  module_b.rs
tests/: TEST_TEMPLATE.md  cli_config_test.rs  cli_tests.rs  config_env_test.rs  document_index_cache_warming_test.rs  document_index_vector_commit_test.rs  document_index_vector_schema_test.rs  embedding_model_comparison.rs  embedding_poc_test.rs  exploration_tests.rs  hybrid_search_integration_test.rs  incremental_indexing_test.rs  incremental_symbol_count_test.rs  integration_tests.rs  mcp_semantic_persistence_test.rs  parsers_tests.rs  pgvector_integration_test.rs  semantic_embedding_cleanup_test.rs  semantic_integration_test.rs  semantic_persistence_integration_test.rs  semantic_tests.rs  simple_indexer_vector_integration_test.rs  tantivy_ivfflat_poc_test.rs  test_c_basic.rs  test_c_comprehensive.rs  test_c_parser_integration.rs  test_cpp_basic.rs  test_cpp_comprehensive.rs  test_cpp_parser_integration.rs  vector_integration_test.rs  vector_module_integration_test.rs  vector_search_accuracy_test.rs  vector_update_poc_test.rs  vector_update_test.rs
(+497 files in other folders)
