[package]
name = "codebase-intelligence"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
bincode = "1.3"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
clap = { version = "4.5.41", features = ["derive"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
hnsw = "0.11.0"
ignore = "0.4.23"
lz4_flex = "0.11.5"
memmap2 = "0.9.7"
num_cpus = "1.17.0"
parking_lot = "0.12.4"
petgraph = "0.8.2"
rayon = "1.10.0"
rkyv = { version = "0.8.10", features = ["bytecheck", "std"] }
rmcp = { version = "0.2.0", features = ["server", "client", "transport-io", "transport-child-process"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite"] }
tantivy = "0.24.2"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
toml = { version = "0.9.2", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tree-sitter = "0.25.8"
tree-sitter-go = "0.23.4"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.23.1"
tree-sitter-python = "0.23.6"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.20.0"
