[package]
name = "codanna"
version = "0.8.8"
authors = ["Angel Bartolli <bartolli@gmail.com>"]
edition = "2024"
description = "Code Intelligence for Large Language Models"
documentation = "https://docs.rs/codanna"
homepage = "https://github.com/bartolli/codanna"
repository = "https://github.com/bartolli/codanna"
license = "Apache-2.0"
readme = "README.md"
keywords = ["mcp-server", "code-intelligence", "semantic-search", "llm", "rag"]
categories = ["development-tools", "command-line-utilities", "parsing", "text-processing", "compilers"]
autoexamples = false

[dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
clap = { version = "4.5.53", features = ["derive", "color", "env"] }
crossbeam-channel = "0.5.15"
dashmap = "6.1.0"
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
hnsw = "0.11.0"
ignore = "0.4.25"
lz4_flex = "0.12.0"
memmap2 = "0.9.9"
notify = "8.2.0"
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
rkyv = { version = "0.8.12", features = ["bytecheck", "std"] }
rmcp = { version = "0.12.0", features = ["server", "client", "transport-io", "transport-child-process", "transport-streamable-http-server", "transport-worker"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10"
tantivy = "0.25.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = { version = "0.9.8", features = ["preserve_order"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tree-sitter = "0.26.3"
tree-sitter-go = "0.25.0" # Upgraded to ABI-15
tree-sitter-gdscript = "6.1.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-kotlin-codanna = "0.3.9"
tree-sitter-php = "0.24.1"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"
walkdir = "2.5.0"
bincode = "2.0.1"
fastembed = "5.5.0"
rand = "0.9.2"
indicatif = "0.18.3"
comfy-table = "7.2.1"
console = "0.16.2"
owo-colors = "4.2.3"
axum = { version = "0.8.8", optional = true }
tower = { version = "0.5.2", optional = true }
tower-http = { version = "0.6.8", features = ["cors"], optional = true }
serde_urlencoded = "0.7"
tokio-util = "0.7.17"
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"], optional = true }
rustls = { version = "0.23.35", default-features = false, features = ["ring"], optional = true }
rcgen = { version = "0.14.6", optional = true }
is-terminal = "0.4.17"
regex = "1.12.2"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
chrono = "0.4.42"
git2 = { version = "0.20.3", features = ["vendored-openssl"] }
tempfile = "3.24.0"
serde_json5 = "0.2.1"
tree-sitter-swift = "0.7.1"
glob = "0.3.3"
async-trait = "0.1.89"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
testcontainers = "0.26.3"

[features]
default = []
http-server = ["axum", "tower", "tower-http"]
https-server = ["http-server", "axum-server", "rustls", "rcgen"]
axum = ["dep:axum"]
tower = ["dep:tower"]
tower-http = ["dep:tower-http"]
axum-server = ["dep:axum-server"]
rustls = ["dep:rustls"]
rcgen = ["dep:rcgen"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[lints.clippy]
# Minimal lints - main enforcement via CI with `cargo clippy -- -D warnings`
# See clippy.toml for behavior configuration (thresholds, etc.)
uninlined_format_args = "warn"

[[example]]
name = "simple_progress_demo"
path = "examples/simple_progress_demo.rs"

[[bench]]
name = "unified_output_bench"
harness = false

[[bench]]
name = "kotlin_parser_bench"
harness = false
